# audio-image-video-toolkit-ai

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  README.me  requirements-dev.txt  requirements.txt
Audio/: Makefile  README.md
Audio/cpp/: CMakeLists.txt
Audio/cpp/inc/: SPSCFloatBuffer.h  audio_framework_base.h  audio_io_context.h  audio_jitter_buffer.h  denoise_config.h  denormal_control.h  error_codes.h  fft_utils.h  network_rtp.h  wav_utils.h  wav_writer.h
Audio/cpp/src/: audio_framework_base.cpp  audio_io_context.cpp  audio_jitter_buffer.cpp  fft_utils.cpp  live_audio_denoise.cpp  live_audio_denoise_network.cpp  network_rtp.cpp  wav_freq_csv.cpp  wav_freq_csv_channelized.cpp  wav_to_csv.cpp  wav_utils.cpp  wav_writer.cpp
Audio/cpp/tests/: test_ai_fft_workflow.py  test_fft_utils.cpp  test_live_audio_denoise.cpp  test_wav_freq_csv.py  test_wav_freq_csv_multi_channel.cpp  test_wav_to_csv.cpp  test_wav_to_csv.py  test_wav_utils.cpp  test_wav_writer.cpp
Audio/cpp/tests/ai_tools/: nn_module.py
Audio/cpp/utils/inc/: rms_log_analyze.h
Audio/cpp/utils/src/: rms_log_analyze.cpp
Audio/python/bayesian/: app_bayesian_fft_streamlit_db.py  requirements.txt
Audio/python/src/: comp_plot_wav_diff.py  compare_csv.py  comparetorch_csv.py  config_denoise_gan.yaml  denoise_gan.py
Audio/python/tests/: ai_llm_fft_demo.py  test_ai_fft_windowing.py  test_ai_fft_workflow.py  test_ai_llm_fft_demo.py  test_comp_plot_wav_diff.py  test_compare_csv.py  test_comparetorch.py
Audio/python/tests/ai_tools/: ai_fft_windowing.py  ai_fft_workflow.py  ai_fft_workflow_mlp.py  nn_module.py
Image/: README.md  requirements.txt
Image/javascript/: crescentDemo.js  package-lock.json  package.json
Image/javascript/web/: App.jsx  index.html  package-lock.json  package.json
Image/python/: requirements.txt  run_server.sh  server.py
Image/python/src/: README.md  app_predict_crescent_tf.py  config_predict_crescent_tf.yaml  detect_crescent_classical.py  generate_crescent_images.py  predict_crescent.py  predict_crescent_pytorch.py  predict_crescent_pytorch_cnn.py  predict_crescent_tf.py  predict_crescent_tf_classic.py  predict_crescent_vit.py  server.py
Image/typescript/: crescentDemo.ts  nano  npm_init.sh  package-lock.json  package.json  tsconfig.json
Image/typescript/web/: App.tsx  data.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  web_run.sh
Multimodal/: README.md  requirements.txt
Multimodal/bayesian/: app_bayesian_astar.py  app_bayesian_astar_db.py  app_bayesian_fft_streamlit_db.py
Multimodal/db/: image_graph_db.py
Multimodal/graphs/: app_images_astar.py
Multimodal/llm/: ai_llm_fft_demo.py  test_ai_llm_fft_demo.py
Video/cpp/VideoEncodingAndVision/: Makefile  README.md
Video/cpp/VideoEncodingAndVision/run_output/: trace_log_20250904_155532_454.txt
Video/cpp/VideoEncodingAndVision/src/video_common/inc/: video_common.h
Video/cpp/VideoEncodingAndVision/src/video_common/src/: video_common.cpp
Video/cpp/VideoEncodingAndVision/src/video_encoding/: video_block_matching.cpp  video_frame_prediction.cpp  video_motion_estimation.cpp  video_motion_estimation.cpp.bad  video_residual.cpp
Video/cpp/VideoEncodingAndVision/src/video_motion_and_depth/: video_depth_from_stereo.cpp  video_trajectory_from_motion.cpp  video_vio_demo.cpp
cpp/audio/: readme_sample.aiff  wav_freq_csv.cpp  wav_to_csv  wav_to_csv.cpp  wav_to_csv_fix
cpp/tests/: test_ai_fft_windowing.py  test_ai_fft_workflow.py  test_wav_freq_csv.cpp  test_wav_freq_csv.py  test_wav_to_csv.cpp  test_wav_to_csv.py
cpp/tests/ai_tools/: ai_fft_windowing.py  ai_fft_workflow.py  ai_test_all_windows.py  generate_wav.py
python/audio/: comparetorch_csv.py
python/tests/: test_comparetorch.py  test_video_depth_midas.py
python/video/: video_depth_midas.py
python_matlab_analogy/: matlab_analogy_demo.py  requirements.txt
python_matlab_analogy/src/: analogy_tables.py  audio_processing_demo.py
